--- a/index.html
+++ b/index.html
@@ -3,10 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello Mundo!</title>
+    <link rel="stylesheet" href="style.css">
+    <title>faceCam</title>
   </head>
   <body>
+    <div class="app">
    <div class="wrapper">
     <video id="video" autoplay></video>
-   </div>
+  </div>
+
+  </div>
+  <div class="title">
+    <span class="title__logo">faceCam</span>
+    <span class="title__texto">Desenvolvido por Aldeny Jr.</span>
+  </div>
+   <script src="webcam.js"></script>
 </html>
